--- a/modules/ROOT/pages/download/nb25/index.adoc
+++ b/modules/ROOT/pages/download/nb25/index.adoc
@@ -23,22 +23,25 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Downloading Apache NetBeans 24
+= Downloading Apache NetBeans 25
 :page-layout: page_noaside
 :page-tags: download
 :jbake-status: published
-:keywords: Apache NetBeans 24 Download
-:description: Apache NetBeans 24 Download
+:keywords: Apache NetBeans 25 Download
+:description: Apache NetBeans 25 Download
 :toc: left
 :toc-title:
 :icons: font
 
-// check version above
-:netbeans-version: 24
+// check version above and follow the TODOs
+:netbeans-version: 25
+// TODO            ^^
 
-// base URLs - when archiving, delete the next 2 lines and uncomment the following 2
-:url-download: https://archive.apache.org/dist/netbeans/
-:url-download-keychecksum: https://archive.apache.org/dist/netbeans/
+// TODO base URLs - when archiving, delete the next 2 lines and uncomment the following 2
+:url-download: https://www.apache.org/dyn/closer.lua/netbeans/
+:url-download-keychecksum: https://downloads.apache.org/netbeans/
+// :url-download: https://archive.apache.org/dist/netbeans/
+// :url-download-keychecksum: https://archive.apache.org/dist/netbeans/
 
 //// 
 url-download depends of release status archived or not
@@ -50,7 +53,9 @@ https://archive.apache.org/dist/netbeans/  (//archived)
 https://downloads.apache.org/netbeans/ (//current)
 ////
 
-Apache NetBeans {netbeans-version} was released on December 10, 2024.
+Apache NetBeans {netbeans-version} was released on February 20, 2025.
+// TODO update date                                ^^^^
+
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
 NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
@@ -103,9 +108,11 @@ Foundation. They may include other contents (eg. JDK) under additional license t
 
 == Deployment Platforms
 
-The Apache NetBeans {netbeans-version} binary releases require JDK 17+, and officially support running on JDK 17, 21 and 23.
+Apache NetBeans {netbeans-version} supports running on JDK 24, 23, 21 or 17.
 
 TIP: The Runtime JDK NetBeans uses does not influence the JDK range projects can use.
+
+TIP: Use the latest JDK update release for the best experience (see link:https://javaalmanac.io/jdk/[Java Version Almanac]).
 
 == Known Issues
 
@@ -114,6 +121,8 @@ TIP: The Runtime JDK NetBeans uses does not influence the JDK range projects can
 * On windows you may encounter the following JDK issue: "Comparison method violates its general contract"
 +
 resolution: use latest JDK update release, link:https://github.com/apache/netbeans/discussions/6361[more info]
+
+* Windows/ARM is currently not a fully supported platform
 
 * link:https://github.com/apache/netbeans/issues[All Issues on GitHub]
 
@@ -132,8 +141,9 @@ in a directory of your liking.
 As in any other Apache Project, the Apache NetBeans Community approved this release
 through the following voting processes in our xref:community/mailing-lists.adoc[mailing lists]:
 
-- link:https://lists.apache.org/thread/ko7vj4otmkfwdcr7hrzkmdqs13tvsxzx[PMC vote]
-- link:https://lists.apache.org/thread/r46xk5ydr2ln0wy109znh4kzq97nhkk4[PMC vote result]
+- link:https://lists.apache.org/thread/1s7pl96143j8vqgfk9wp08lw4tm9ks3j[PMC vote]
+- link:https://lists.apache.org/thread/8pchbx5jchyjygsdtr89gqw0o9psc3qy[PMC vote result]
+// TODO update links                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 == Earlier Releases
 
