--- a/modules/ROOT/pages/download/nb25/index.adoc
+++ b/modules/ROOT/pages/download/nb25/index.adoc
@@ -38,10 +38,8 @@ for important requirements for download pages for Apache projects.
 // TODO            ^^
 
 // TODO base URLs - when archiving, delete the next 2 lines and uncomment the following 2
-:url-download: https://www.apache.org/dyn/closer.lua/netbeans/
-:url-download-keychecksum: https://downloads.apache.org/netbeans/
-// :url-download: https://archive.apache.org/dist/netbeans/
-// :url-download-keychecksum: https://archive.apache.org/dist/netbeans/
+:url-download: https://archive.apache.org/dist/netbeans/
+:url-download-keychecksum: https://archive.apache.org/dist/netbeans/
 
 //// 
 url-download depends of release status archived or not
