--- a/modules/ROOT/pages/community/who.adoc
+++ b/modules/ROOT/pages/community/who.adoc
@@ -27,515 +27,18 @@
 ifdef::env-github[]
 :imagesdir: ../../images
 endif::[]
+ifndef::env-github[]
+:imagesdir: https://netbeans.apache.org
+endif::[]
 
 
-Apache NetBeans Project Management Committee and Committers are listed alphabetically below.
+Apache NetBeans Project Management Committee and Committers are listed on the link:https://people.apache.org/phonebook.html?project=netbeans[Apache Phonebook]
 
-[width="70%"]
-|=== 
-a|=== Anton Epple| 
-a|image::community/contributor-monacotoni.png[] a| * link:https://dukescript.com[Dukehoff GmbH]
-* Munich, Germany
-* link:https://github.com/dukescript[GitHub]
-* link:https://github.com/apache/netbeans/commits?author=dukescript[Apache NetBeans commits]
-* Twitter: link:https://twitter.com/monacotoni[@monacotoni]
-|=== 
 
-[width="70%"]
-|=== 
-a|=== Antonio Vieiro| 
-a|image::community/contributor-vieiro.png[] a| * apache id: vieiro
-* Spain
-* Platform, editor, C, Java, Java EE  
-|=== 
+Our Project Management Committee Chair is *Geertjan Wielenga* 
 
-[width="70%"]
-|=== 
-a|=== Aristides Villarreal| 
-a|image::community/contributor-avbravo.png[] a| * apache id: avbravo
-* Panama
-* Java EE, NetBeans Platform, NoSQL   
-|=== 
+You may retrieve commiters/contributors in link:https://github.com/apache/netbeans/graphs/contributors[github contributors stats link]
+and sometime you can meet them together around a beer like in Prague 2022.
 
-[width="70%"]
-|=== 
-a|=== Arunava Sinha| 
-a|image::community/contributor-asinha.png[] a| * apache id: asinha
-* Oracle
-* Bangalore, India
-|=== 
-
-[width="70%"]
-|=== 
-a|=== Ate Douma| 
-a|image::community/contributor-ate.png[] a| * apache id: ate
-* Netherlands
-|=== 
-
-[width="70%"]
-|=== 
-a|=== Attila Kelemen| 
-a|image::community/contributor-kelemen.png[] a| * apache id: kelemen
-* Hungary
-|=== 
-
-[width="70%"]
-|=== 
-a|=== Bertrand Delacretaz| 
-a|image::community/contributor-bertrand.png[] a| * apache id: bdelacretaz
-* Switzerland
-* http://grep.codeconsult.ch   
-|=== 
-
-[width="70%"]
-|=== 
-a|=== Bruno Flávio| 
-a|image::community/contributor-brunoflavio.png[] a| * apache id: brunoflavio
-* Porto, Portugal
-* Groovy / Grails support 
-|===  
-
-[width="70%"]
-|=== 
-a|=== Bruno Souza| 
-a|image::community/contributor-brjavaman.png[] a| * apache id: brjavaman
-* Brazil
-|===   
-
-[width="70%"]
-|=== 
-a|=== Christian Lenz| 
-a|image::community/contributor-chrizzly.png[] a| * Spreadshirt
-* Leipzig, Germany
-* Twitter: link:https://twitter.com/Chrizzly42[@Chrizzly42]
-|===  
-
-[width="70%"]
-|=== 
-a|=== Constantin Drabo| 
-a|image::community/contributor-pandaconstantin.png[] a| * apache id: pandaconstantin
-* Université de Ouagadougou
-* Ouagadougou, Burkina Faso
-|===
-
-[width="70%"]
-|=== 
-a|=== Daniel Gruno| 
-a|image::community/contributor-humbedooh.png[] a| * apache id: humbedooh
-* Denmark
-|===
-
-[width="70%"]
-|=== 
-a|=== David Heffelfinger| 
-a|image::community/contributor-dheffelfinger.png[] a| * apache id: dheffelfinger
-* Ensode Technology, LLC
-* Fairfax, VA, USA
-|===
-
-[width="70%"]
-|=== 
-a|=== Dusan Balek| 
-a|image::community/contributor-dbalek.png[] a| * apache id: dbalek
-* Oracle
-* Prague, Czech Republic
-|===
-
-[width="70%"]
-|=== 
-a|=== Eirik Bakke| 
-a|image::community/contributor-eirikbakke.png[] a| * apache id: eirikbakke
-* USA
-|===
-
-[width="70%"]
-|=== 
-a|=== Emmanuel Hugonnet| 
-a|image::community/contributor-ehsavoie.png[] a| * apache id: ehsavoie
-* Red Hat
-* Barraux, France 
-* WildFly
-|===    
-  
-[width="70%"]
-|=== 
-a|=== Eric Barboni| 
-a|image::community/contributor-skygo.png[] a| * apache id: skygo
-* ICS - IRIT, Université Paul Sabatier
-* Toulouse, France
-* NetBeans Platform, Java Editor, Maven
-|===   
-  
-[width="70%"]
-|=== 
-a|=== Florian Vogler| 
-a|image::community/contributor-florian.png[] a| * apache id: fvogler
-* Airbus Defence and Space
-* Bodensee, Germany
-* NetBeans Platform, Groovy, Maven
-|===  
-
-[width="70%"]
-|=== 
-a|=== Geertjan Wielenga| 
-a|image::community/contributor-geertjan.png[] a| * Oracle
-* Amsterdam, The Netherlands
-* link:https://github.com/geertjanw[GitHub]
-* link:https://github.com/apache/netbeans/commits?author=geertjanw[Apache NetBeans commits]
-* Twitter: link:https://twitter.com/geertjanw[@geertjanw]
-|===
-
-[width="70%"]
-|=== 
-a|=== Glenn Holmer| 
-a|image::community/contributor-cenbe.png[] a| * apache id: Cenbe
-* USA
-|===
-
-[width="70%"]
-|=== 
-a|=== Ioannis Kostaras| 
-a|image::community/contributor-ikost.png[] a| * apache id: ikost
-* Liége, Belgium
-|===
-
-[width="70%"]
-|=== 
-a|=== Ivar Grimstad| 
-a|image::community/contributor-ivargrimstad.png[] a| * apache id: ivargrimstad
-* Sweden
-|===
-
-[width="70%"]
-|=== 
-a|=== James Gosling	| 
-a|image::community/contributor-jag.png[] a| * apache id: jag
-* USA
-|===
-
-[width="70%"]
-|=== 
-a|=== Jan Lahoda| 
-a|image::community/contributor-jlahoda.png[] a| * apache id: jlahoda
-* Oracle
-* Prague, Czech Republic
-* Java Editor, Java
-|===
-
-[width="70%"]
-|=== 
-a|=== Jan Pirek| 
-a|image::community/contributor-jpirek.png[] a| * apache id: jpirek
-* Oracle
-* Prague, Czech Republic
-|===
-
-[width="70%"]
-|=== 
-a|=== Jaroslav Tulach| 
-a|image::community/contributor-jtulach.png[] a| * apache id: jtulach
-* Oracle
-* Prague, Czech Republic
-|===
-
-[width="70%"]
-|=== 
-a|=== Jean-Marc Borer	| 
-a|image::community/contributor-jmborer.png[] a| * apache id: jmborer
-* Switzerland
-|===
-
-[width="70%"]
-|=== 
-a|=== Jesse Glick| 
-a|image::community/contributor-jglick.png[] a| * apache id: jglick
-* CloudBees
-* North Carolina, USA 
-* API Support
-|===
-
-[width="70%"]
-|=== 
-a|=== Jiri Kovalsky| 
-a|image::community/contributor-jkovalsky.png[] a| * apache id: jkovalsky
-* Oracle
-* Bohumin, Czech Republic
-* Java, Plugins, NetCAT
-|===
-
-[width="70%"]
-|=== 
-a|=== Joerg Michelberger	| 
-a|image::community/contributor-jmichelberger.png[] a| * apache id: jmichelberger
-* Germany  
-|===
-
-[width="70%"]
-|=== 
-a|=== Johan Vos| 
-a|image::community/contributor-johanvos.png[] a| * apache id: jvos
-* Gluon
-* Belgium
-|===
-
-[width="70%"]
-|=== 
-a|=== John McDonnell| 
-a|image::community/contributor-johnmcdonnell.png[] a| * apache id: johnmcdonnell
-* BearingPoint Ireland
-* Dublin, Ireland 
-* Maven, Java EE, Docker  
-|===
-
-[width="70%"]
-|=== 
-a|=== José Pereda| 
-a|image::community/contributor-jperedadnr.png[] a| * apache id: jperedadnr
-* Spain
-|===
-
-[width="70%"]
-|=== 
-a|=== Josh Juneau| 
-a|image::community/contributor-javajuneau.png[] a| * apache id: javajuneau
-* USA
-|===
-
-[width="70%"]
-|=== 
-a|=== Junichi Yamamoto| 
-a|image::community/contributor-junichi11.png[] a| * apache id: junichi11
-* Fukuoka, Japan
-* PHP
-|===
-
-[width="70%"]
-|=== 
-a|=== Ken Fogel| 
-a|image::community/contributor-kfogel.png[] a| * apache id: kfogel
-* Dawson College
-* Montreal, Quebec, Canada
-|===
-
-[width="70%"]
-|=== 
-a|=== Kirk Pepperdine	| 
-a|image::community/contributor-kirk-pepperdine.png[] a| * apache id: kirk-pepperdine
-* Microsoft
-* Hungary
-|===
-
-[width="70%"]
-|=== 
-a|=== Lars Bruun-Hansen| 
-a|image::community/contributor-lbruun.png[] a| * apache id: lbruun
-* Denmark
-|===
-
-[width="70%"]
-|=== 
-a|=== Laszlo Kishalmi| 
-a|image::community/contributor-lkishalmi.png[] a| * apache id: lkishalmi
-* EPAM Systems Inc.
-* Portland, Oregon, USA
-* Gradle, Snap
-|===
-
-[width="70%"]
-|=== 
-a|=== Leonardo Zanivan| 
-a|image::community/contributor-panga.png[] a| * apache id: panga
-* Aurea Software
-* Criciúma, Brazil 
-* Montreal, Quebec, Canada
-|===
-
-[width="70%"]
-|=== 
-a|=== Mark Stephens| 
-a|image::community/contributor-markee174.png[] a| * apache id: markee174
-* IDRsolutions
-* Tonbridge, Kent, UK
-|===
-
-[width="70%"]
-|=== 
-a|=== Mark Struberg| 
-a|image::community/contributor-struberg.png[] a| * apache id: struberg
-* Vienna, Austria
-|===
-
-[width="70%"]
-|=== 
-a|=== Martin Entlicher| 
-a|image::community/contributor-entl.png[] a| * apache id: entl
-* Oracle
-* Prague, Czech Republic
-|===	
-
-[width="70%"]
-|=== 
-a|=== Martin Klähn| 
-a|image::community/contributor-mklaehn.png[] a| * apache id: mklaehn
-* Airbus Defence and Space
-* Bodensee, Germany
-|===
-
-[width="70%"]
-|=== 
-a|=== Matthias Bläsing| 
-a|image::community/contributor-matthiasblaesing.png[] a| * apache id: matthiasblaesing
-* Germany
-|===
-
-[width="70%"]
-|=== 
-a|=== Michael Müller| 
-a|image::community/contributor-muellermi.png[] a| * apache id: muellermi
-* Germany
-|===
-
-[width="70%"]
-|=== 
-a|=== Michael Nascimento| 
-a|image::community/contributor-misterm.png[] a| * apache id: misterm
-* Brazil
-|===
-
-[width="70%"]
-|=== 
-a|=== Michel Graciano| 
-a|image::community/contributor-mgraciano.png[] a| * apache id: mgraciano
-* Brazil
-|===
-
-[width="70%"]
-|=== 
-a|=== Neil C Smith| 
-a|image::community/contributor-neilcsmith.png[] a| * apache id: neilcsmith
-* Praxis LIVE
-* Oxford, UK 
-|===
-
-[width="70%"]
-|=== 
-a|=== Ralph Benjamin Ruijs| 
-a|image::community/contributor-ralphbenjamin.png[] a| * apache id: ralphbenjamin
-* Netherlands 
-|===
-
-[width="70%"]
-|=== 
-a|=== Reema Taneja| 
-a|image::community/contributor-rtaneja1.png[] a| * apache id: rtaneja1
-* Oracle
-* Bangalore, India 
-|===
- 
-[width="70%"]
-|=== 
-a|=== Sarvesh Kesharwani| 
-a|image::community/contributor-sarvesh.png[] a| * apache id: sarvesh
-* Bangalore, India 
-|=== 
-
-[width="70%"]
-|=== 
-a|=== Shai Almog| 
-a|image::community/contributor-codenameone.png[] a| * apache id: codenameone
-* Israel
-|=== 
-
-[width="70%"]
-|=== 
-a|=== Simon Phipps| 
-a|image::community/contributor-webmink.png[] a| * apache id: webmink
-* England
-|=== 
-  
-[width="70%"]
-|=== 
-a|=== Svata Dedic | 
-a|image::community/contributor-sdedic.png[] a| * apache id: sdedic
-* Prague 
-* Czech Republic
-|=== 
- 
-[width="70%"]
-|=== 
-a|=== Sven Reimers | 
-a|image::community/contributor-sreimers.png[] a| * apache id: sreimers
-* Airbus Defence and Space
-* Bodensee, Germany
-|===
-
-[width="70%"]
-|=== 
-a|=== Thilina Ranathunga | 
-a|image::community/contributor-thilina01.png[] a| * apache id: thilina01
-* Nano Creations
-* Ekala, Sri Lanka
-* http://thilina01.com/
-* https://www.linkedin.com/in/thilina-ranathunga-35bb2864/
-* https://github.com/thilina01 
-|===
-
-[width="70%"]
-|=== 
-a|=== Timon Veenstra | 
-a|image::community/contributor-timon.png[] a| * apache id: timon
-* Corizon 
-* Ekala, Sri Lanka
-* Groningen, the Netherlands
-|===
-
-[width="70%"]
-|=== 
-a|=== Tomas Zezula | 
-a|image::community/contributor-tzezula.png[] a| * apache id: tzezula
-* Prague 
-* Czech Republic
-|===
-
-[width="70%"]
-|=== 
-a|=== Tushar Joshi | 
-a|image::community/contributor-tusharjoshi.png[] a| * apache id: tusharjoshi
-* Persistent Systems 
-* Nagpur, Maharashtra, India 
-|===
-
-[width="70%"]
-|=== 
-a|=== Vikas Prabhakar| 
-a|image::community/contributor-vikasprabhakar.png[] a| * apache id: vikasprabhakar
-* Bangalore, India 
-|=== 
-
-[width="70%"]
-|=== 
-a|=== Vladimir Voskresensky | 
-a|image::community/contributor-vladimirvv.png[] a| * apache id: vladimirvv
-* Azul 
-* St. Petersburg, Russia
-* C/C++, code model (ANTLR and Clang-based)
-|===
-
-[width="70%"]
-|=== 
-a|=== Wade Chandler | 
-a|image::community/contributor-wadechandler.png[] a| * apache id: wadechandler
-* Knoxville 
-* TN, USA
-* C/C++, code model (ANTLR and Clang-based)
-|===
-
-[width="70%"]
-|=== 
-a|=== Zoran Sevarac | 
-a|image::community/contributor-sevarac.png[] a| * apache id: sevarac
-* University of Belgrade 
-* Faculty of Organizational Sciences, Belgrade, Serbia
-* artificial intelligence, machine learning
-|===
+image::blogs/entry/netbeans-pub-hangout-in-prague-pic1.png[Pub Hangout in Prague 2022]
 
